@@ -1,5 +1,10 @@
 2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>
 
+	* test/shell.c:
+	* src/gqueue.c: plugged leaks.
+
+2006-08-25 Gonzalo Paniagua Javier <gonzalo@ximian.com>
+
 	* test/path.c:
 	* src/gpath.c: when PATH is not defined, the current dir is used.
 	See execvp(3).
